--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Motivation is the catalyzing ingredient for every successful innovation</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Welcome</a></li>
 							
 						</ul>
 						<ul class="icons">
@@ -52,13 +52,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">My Name is Elvis Murengerantwari<br />
+									<h2><a href="#">My Name is Elvis Murengerantwari <br />
 									</a></h2>
 									<p>As an IT professional, I am driven by an insatiable curiosity for technology and an unwavering commitment to solving complex problems. With a diverse skill set encompassing everything from network administration to software development, I thrive in the dynamic world of IT. My passion lies in leveraging innovation to optimize processes, enhance security, and deliver solutions that empower businesses.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pngtree-hand-gesture-business-office-technology-internet-map-business-technology-gesture-image_791811.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large"></a></li>
 								</ul>
 							</article>
 
